--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "colors": "^1.4.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
