--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ FRONTEND_URL=http://localhost:3000
 # database
 DB_URI=
 
+# CORS Configuration
+# Development: Local Next.js server
+# Production: Your production domain only
+CORS_ORIGINS=
+
 # JWT
 JWT_SECRET_KEY=
 JWT_EXPIRE_TIME=
